prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__sort_with_aggregation.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nsort artist_id\naggregate { artist_number = count artist_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_with_aggregation.prql
---
SELECT
  COUNT(*) AS artist_number
FROM
  albums
