prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__wildcard_this.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect { album_id, title, artist_id }\nsort this.*\n"
input_file: prqlc/prqlc/tests/integration/queries/wildcard_this.prql
---
SELECT
  album_id,
  title,
  artist_id
FROM
  albums
ORDER BY
  album_id,
  title,
  artist_id
